<resources>
    <string name="app_name">BookPal</string>
    <string name="findBook">Find Book</string>
    <string name="addBook">Add New Book</string>
    <string name="myBooks">My Books</string>
    <string name="action_about">About</string>
    <string name="searchBook">Search</string>
    <string name="or">OR</string>
    <string name="paperback">Paperback</string>
    <string name="hardcover">Hardcover</string>
    <string name="add">Add</string>

    <!--hints-->
    <string name="hintBookName">Book Name</string>
    <string name="hintLocation">Your Location Preference</string>
    <string name="hintISBNOrAuthor">ISBN No / Author Name</string>
    <string name="hintAuthor">Author Name</string>
    <string name="hintISBN">ISBN No (optional)</string>
    <string name="hintPublishingYear">Publishing Year</string>
    <string name="hintLanguage">Language</string>
    <string name="login_with">Login With</string>
    <string name="skip">SKIP</string>
    <string name="signUp">Sign Up</string>
    <string name="submit">SUBMIT</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="intro1">Discover great books and share</string>
    <string name="intro2">with your friends</string>
    <string name="useEmailText">OR USE YOUR EMAIL ADDRESS</string>

    <string name="hintName">Name</string>
    <string name="hintMobile">Mobile</string>
    <string name="hintEmail">Email</string>
    <string name="hintPwd">Password</string>
    <string name="hintPinCode">Area / Pincode</string>
    <string name="hintYourLocation">Your Location</string>

    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission">Allow permissions to access all the functionalities of app.</string>
    <string name="permission_denial_message">Please provide required permission to access the app.</string>
    <string name="label_ok">Ok</string>
    <string name="no_internet_connection">No Internet connectivity. Please check your internet connection and try again.</string>
    <string name="error_msg">Some error occurred. Please try after sometime.</string>
    <string name="no_book_added">No books added. Please add a book and increase your reading network.</string>

    <string name="msg_image_not_uploaded">Please try again, unable to upload image</string>
    <string name="msg_image_not_deleted">Please try again, unable to delete image</string>
    <string name="msg_401">Session expired. Please login again to continue</string>
    <string name="msg_404">Unable to send request to server. Please try again later.</string>
    <string name="msg_4xx">Something happened. Please login again to continue</string>
    <string name="msg_5xx">Oops!! Something happened. Please try again</string>

    <string name="bookName">Book Name -</string>
    <string name="authorName">Author Name -</string>
    <string name="isbn">Isbn -</string>
    <string name="publishingYear">Publishing Year -</string>
    <string name="language">Language -</string>
    <string name="bookType">Book Type -</string>

    <!--chat-->
    <string name="chat">Chat</string>
    <string name="type_msg">Type message</string>
    <string name="delivered_text">Delivered</string>
    <string name="sending_text">Sending...</string>
    <string name="failed_text">Failed</string>
</resources>
