<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayout_Main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_10"
        tools:context="com.bookpal.activity.SignUpActivity">

        <com.bookpal.uicomponent.CustomEditText
            android:id="@+id/editText_Name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:hint="@string/hintName"
            android:inputType="textPersonName"/>

        <com.bookpal.uicomponent.CustomEditText
            android:id="@+id/editText_mobile"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:hint="@string/hintMobile"
            android:inputType="number"
            android:maxLength="10"/>

        <com.bookpal.uicomponent.CustomEditText
            android:id="@+id/editText_email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_15"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"/>

        <com.bookpal.uicomponent.CustomEditText
            android:id="@+id/editText_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_60"
            android:hint="@string/hintPwd"
            android:inputType="textVisiblePassword"/>

        <com.bookpal.uicomponent.CustomEditText
            android:id="@+id/editText_location"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_60"
            android:hint="@string/hintYourLocation"
            android:visibility="gone"/>

        <com.bookpal.uicomponent.CustomButton
            android:id="@+id/button_register"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:text="@string/register"/>
    </LinearLayout>
</RelativeLayout>
